# GM

./: CMakeLists.txt  README.md  main.cpp
draw/: CMakeLists.txt  drawing.cpp  drawing.h  drawing_interface.cpp  drawing_interface.h
model/: CMakeLists.txt  circle.cpp  circle.h  figure.cpp  figure.h  grid.cpp  grid.h  line.h  point.h  shape.cpp  shape.h
window/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
